fix nav and add rsvp

--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
 					</div>
 					<div class="col-md-9 col-xs-7 text-right menu-1">
 						<ul>
-							<li><a href="index.html active">Home</a></li>
-							<li><a href="about.html">Sobre Nozes</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="services.html">Utilidades</a></li>
-							<li><a href="gallery.html">Presentes</a></li>
-							<li><a href="#rsvp">RSVP</a></li>
+							<li><a href="gift_list.html">Presentes</a></li>
+							<li><a href="rsvp.html">RSVP</a></li>
 						</ul>
 					</div>
 				</div>
@@ -165,61 +164,8 @@
 			</div>
 		</div>
 
-		<div id="tebw-couple-story">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-						<span>We Love Each Other</span>
-						<h2>Our Story</h2>
-						<p>A nossa história foi sendo construida nas cidades que nós moramos, nas aventuras que vivemos e com as pessoas que amamos.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 col-md-offset-0">
-						<ul class="timeline animate-box">
-							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">Florianópolis</h3>
-										<span class="date">December 25, 2015</span>
-									</div>
-									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									</div>
-								</div>
-							</li>
-							<li class="timeline-inverted animate-box">
-								<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">Sao José dos Campos</h3>
-										<span class="date">December 28, 2015</span>
-									</div>
-									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									</div>
-								</div>
-							</li>
-							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">Amsterdam</h3>
-										<span class="date">January 1, 2016</span>
-									</div>
-									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									</div>
-								</div>
-							</li>
-				    	</ul>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<div id="tebw-gallery" class="tebw-section-gray">
+		<div id="tebw-gallery" class="tebw-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
@@ -272,7 +218,7 @@
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center tebw-heading">
 						<h2>A Cidade</h2>
-						<p>O que você precisa saber sobre a cidade.</p>
+						<p>Preparamos um mapa para você curtir ao máximo sua estadia em Urubici! Clique no ícone no canto superior esquerdo do mapa e veja a lista de opções que fizemos para vocês, em cada local nós adicionamos alguns comentários com o que você precisa saber, basta clicar no nome para ver.</p>
 					</div>
 				</div>
 
@@ -284,7 +230,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Hospedagem</h3>
-								<p>Urubici conta com hotel pa porra!</p>
+								<p>Selecionamos algumas opções de pousada que nós conhecemos e recomendamos. Algumas pousadas participam do projeto Acolhida na Colônia. Nós recomendamos essas pousadas pela localização, preço e acolhimento.</p>
 							</div>
 						</div>
 
@@ -294,7 +240,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Gastronomia</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+								<p>Para comer, listamos alguns restaurantes que nós ou nossos amigos e familiares recomendam. Dê uma olhada nos nossos comentários para mais informações.</p>
 							</div>
 						</div>
 
@@ -304,10 +250,9 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Serviços</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+								<p>Em azul nós colocamos outros serviços que talvez você vá precisar utilizar durante sua estadia em Urubici.</p>
 							</div>
 						</div>
-
 
 						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 							<span class="icon">
@@ -315,7 +260,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Turismo</h3>
-								<p>A cidade apresenta diversos pontos turísticos pra você dar uma agitada no seu Instagram. Não perca a oportunidade.</p>
+								<p>Também indicamos alguns pontos turísticos da cidade e arredores. Aproveite o feriado e curta a cidade, ande pelo interior e descubra a natureza e a simplicidade de Urubici ♥️</p>
 							</div>
 						</div>
 
@@ -340,25 +285,7 @@
 					</div>
 				</div>
 				<div class="row animate-box">
-					<div class="col-md-10 col-md-offset-1">
-						<form class="form-inline">
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="name" class="sr-only">Nome</label>
-									<input type="name" class="form-control" id="name" placeholder="Name">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="email" class="sr-only">Email</label>
-									<input type="email" class="form-control" id="email" placeholder="Email">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<button type="submit" class="btn btn-default btn-block">Contem comigo</button>
-							</div>
-						</form>
-					</div>
+					<button class="btn btn-default btn-block">Contem comigo</button>
 				</div>
 			</div>
 		</div>
