--- a/rsvp.html
+++ b/rsvp.html
@@ -46,32 +46,15 @@
 	<nav class="tebw-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-3">
-					<div id="tebw-logo"><a href="index.html">Thaís e Bruno<strong>.</strong></a></div>
+				<div class="col-md-3 col-xs-5">
+					<div id="tebw-logo"><a href="index.html">T &amp; B<strong>.</strong></a></div>
 				</div>
-				<div class="col-xs-10 text-right menu-1">
+				<div class="col-md-9 col-xs-7 text-right menu-1">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">Sobre Nozes</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">O Dia</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown active">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">Blah</a></li>
-								<li><a href="#">Bluh</a></li>
-								<li><a href="#">Bloh</a></li>
-								<li><a href="#">Frlash</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">RSVP</a></li>
+						<li><a href="index.html active">Home</a></li>
+						<li><a href="services.html">Utilidades</a></li>
+						<li><a href="gift_list.html">Presentes</a></li>
+						<li class="active"><a href="rsvp.html">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
@@ -93,90 +76,53 @@
 		</div>
 	</header>
 
-	<div id="tebw-couple" class="tebw-section-gray">
+	<div class="tebw-rsvp">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
-				</div>
-			</div>
-			<div class="couple-wrap animate-box">
-				<div class="couple-half">
-					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
+			<div class="col-md-4 col-xs-12 col-md-offset-4">
+				<form>
+					<div class="form-group">
+						<label for="invt-id">ID do Convite</label>
+						<div class="row">
+							<div class="col-xs-8">
+								<input type="text" class="form-control" id="invt-id" placeholder="Ex: Nxl108575">
+							</div>
+							<div class="col-xs-4">
+								<button type="button" id="invt-id-btn" class="btn-default btn-block">
+									<i class="icon-check"></i>
+								</button>
+							</div>
+						</div>
 					</div>
-					<div class="desc-groom">
-						<h3>Joefrey Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+
+					<div class="form-group invitees">
+						<h3>Convidados:</h3>	
+
 					</div>
-				</div>
-				<p class="heart text-center"><i class="icon-heart2"></i></p>
-				<div class="couple-half">
-					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
+
+					<div class="form-group">
+						<label for="phone" class="sr-only">Telefone de contato (zapzap)</label>
+						<input type="phone" class="form-control" id="phone" placeholder="31 0621681055">
 					</div>
-					<div class="desc-bride">
-						<h3>Sheila Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-					</div>
-				</div>
+
+					<button id="invt-id-btn" class="btn btn-default btn-block">Enviar</button>
+				</form>
 			</div>
 		</div>
 	</div>
-
-	<div class="tebw-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-push-6 animate-box">
-					<iframe class="airtable-embed" src="https://airtable.com/embed/shrsB7VcP7OKW9tMt?backgroundColor=pink" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-				</div>
-				<div class="col-md-5 col-md-pull-5 animate-box">
-					
-					<div class="tebw-contact-info">
-						<h3>Contact Information</h3>
-						<ul>
-							<li class="address">198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-							<li class="url"><a href="http://gettemplates.co">gettemplates.co</a></li>
-						</ul>
-					</div>
-
-				</div>
-			</div>
-			
-		</div>
-	</div>
-
-	<div id="map" class="tebw-map">
-		<iframe src="https://www.google.com/maps/d/u/0/embed?key=AIzaSyDoudBKNG8oDqvsfGipDxFxcjwTtTe6qSE&mid=1_3LYDh-afGVb6SrviV-XkZlqpRqzdat4" width="100%" height="100%"></iframe>
-	</div>
-		<!-- END map -->
 
 	<footer id="tebw-footer" role="contentinfo">
-		<div class="container">
+			<div class="container">
 
-			<div class="row copyright">
-				<div class="col-md-12 text-center">
-					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p>
-					<p>
-						<ul class="tebw-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-					</p>
+				<div class="row copyright">
+					<div class="col-md-12 text-center">
+						<p>
+							<small class="block">© 2018 Copiado e alterado por Bruno</small>
+						</p>
+					</div>
 				</div>
-			</div>
 
-		</div>
-	</footer>
+			</div>
+		</footer>
 	</div>
 
 	<div class="gototop js-top">
