--- a/services.html
+++ b/services.html
@@ -45,32 +45,15 @@
 	<nav class="tebw-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-2">
-					<div id="tebw-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
+				<div class="col-md-3 col-xs-5">
+					<div id="tebw-logo"><a href="index.html">T &amp; B<strong>.</strong></a></div>
 				</div>
-				<div class="col-xs-10 text-right menu-1">
+				<div class="col-md-9 col-xs-7 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown active">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="active"><a href="services.html">Utilidades</a></li>
+						<li><a href="gift_list.html">Presentes</a></li>
+						<li><a href="rsvp.html">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
@@ -222,16 +205,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p>
-					<p>
-						<ul class="tebw-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
+						<small class="block">© 2018 Copiado e alterado por Bruno</small>
 					</p>
 				</div>
 			</div>
