add blog posts and some home improvements

--- a/o_que_vestir.html
+++ b/o_que_vestir.html
@@ -53,7 +53,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li class="has-dropdown">
-							<a>Utilidades</a>
+							<a>Utilidade</a>
 								<ul class="dropdown">
 									<li><a href="beleza_pura.html">Beleza Pura</a></li>
 									<li><a href="onde_ficar.html">Onde ficar</a></li>
@@ -74,55 +74,28 @@
 		<div class="overlay"></div>
 	</header>
 
-	<div class="tebw-rsvp">
+	<div class="tebw-post">
 		<div class="container">
-			<div class="col-md-6 col-xs-12 col-md-offset-3">
-				<form>
-					<h2>Confirme aqui sua presença!</h2>
+			<div class="col-md-8 col-xs-12 col-md-offset-2">
+				<h2>O que Vestir</h2>
+				
+				<p>Nossa intenção é responder algumas dúvidas frequentes, então fique a vontade para segui-lás ou não :)</p>
 
-					<p>Após informar o id recebido em seu convite, marque os convidados que comparecerão ao casamento. Caso deseja adicionar algum acompanhante, clique no botão <span class="icon-plus"/></p>
-						
-					<div class="form-group">
-						<label for="invt-id">ID do Convite</label>
-						<div class="row">
-							<div class="col-md-8 col-xs-6">
-								<input type="text" class="form-control" id="invt-id" placeholder="Ex: Nxl108575">
-							</div>
-							<div class="col-md-4 col-xs-6">
-								<button type="button" id="invt-id-btn" class="btn-default btn-block">
-									Continuar
-								</button>
-							</div>
-						</div>
-					</div>
+				<h3>Dress code: Esporte fino</h3>
+				<p>Definição da Maria Kalil: É um estilo muito versátil e perfeito para situações que exigem um contraponto do formal com o informal. Antigamente, era chamado de tenue de ville, mas ao longo dos anos, foi recebendo esse nome devido sua influência no traje esporte (por causa de sua casualidade) e o traje social (um pouco mais formal).</p>
 
-					<div class="form-group second-step">
-						<div class="invitee-list"></div>
-						<dir class="add-more-message">
-							<p>Estamos contanto com no máximo dois extras por convite. Caso tenhamos esquecido de alguém, por favor entre em contato.</p>
-						</dir>
-						<button type="button" id="add-invt-btn" class="btn-default btn-block">
-							<i class="icon-plus"></i>
-						</button>
-					</div>
+				<p>Definição do Bruno e da Thaís: Esteja confortável e feliz.</p>
 
-					<div class="form-group second-step">
-						<label for="phone">Telefone de contato (whatsapp de preferência)</label>
-						<input type="phone" class="form-control" id="phone" placeholder="Ex: +31 0621681055">
-					</div>
+				<h3>2. Clima na cidade</h3>
+				Novembro é um mês quente em Urubici, mas é bastante comum esfriar um pouco durante a noite na cidade, então recomendamos levar casaco e calça comprida na mala. (As temperaturas neste mês costumam ficar na faixa de 20 até 10 graus).</p>
 
-					<div class="form-group second-step">
-						<label for="music-request">Deseja contribuir para o reportório do DJ?</label>
-						<input type="text" class="form-control" id="music-request" placeholder="Ex: Evidências">
-					</div>
+				<p>No dia do casamento a cerimônia ocorre de dia em um local aberto e a recepção começa às 18h em um salão fechado.</p>
 
-					<div class="form-group second-step">
-						<label for="food-restriction">Alguém possui restrição alimentar?</label>
-						<input type="text" class="form-control" id="food-restriction" placeholder="Ex: Fulana não come carne">
-					</div>
+				<h3>3. Preocupações de casamento ao ar livre</h3>
+				<p>O casamento será ao ar livre, porém existe estradinhas para você andar tanto no local da cerimônia quanto no caminho até o salão de festa, sendo assim, não se preocupe com lama ou grama na hora de escolher que sapato ou comprimento de vestido usar.</p>
 
-					<button id="invt-id-btn" type="button" class="btn btn-default btn-block second-step">Enviar</button>
-				</form>
+				<p>Apesar de ser em local aberto, a cerimônia ocorrerá em um local arborizado e com bastante sombra.</p>
+
 			</div>
 		</div>
 	</div>
