--- a/gift_list.html
+++ b/gift_list.html
@@ -50,8 +50,16 @@
 				</div>
 				<div class="col-md-9 col-xs-7 text-right menu-1">
 					<ul>
-						<li><a href="index.html active">Home</a></li>
-						<li><a href="services.html">Utilidades</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li class="has-dropdown">
+							<a>Utilidade</a>
+								<ul class="dropdown">
+									<li><a href="beleza_pura.html">Beleza Pura</a></li>
+									<li><a href="onde_ficar.html">Onde ficar</a></li>
+									<li><a href="o_que_vestir.html">O que vestir</a></li>
+								</ul>
+							</a>
+						</li>
 						<li class="active"><a href="gift_list.html">Presentes</a></li>
 						<li><a href="rsvp.html">RSVP</a></li>
 					</ul>
