--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
 					<div class="col-md-9 col-xs-7 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Utilidades</a></li>
+							<li class="has-dropdown">
+								<a>Utilidade</a>
+									<ul class="dropdown">
+										<li><a href="beleza_pura.html">Beleza Pura</a></li>
+										<li><a href="onde_ficar.html">Onde ficar</a></li>
+										<li><a href="o_que_vestir.html">O que vestir</a></li>
+									</ul>
+								</a>
+							</li>
 							<li><a href="gift_list.html">Presentes</a></li>
 							<li><a href="rsvp.html">RSVP</a></li>
 						</ul>
@@ -169,41 +177,37 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-						<span>Nossas memórias</span>
-						<h2>Galeria</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<span>Dicas dos noivos</span>
+						<h2>Utilidades</h2>
 					</div>
 				</div>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12">
 						<ul id="tebw-gallery-list">
 							
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-							<a href="images/gallery-1.jpg">
-								<div class="case-studies-summary">
-									<span>14 Photos</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-							<a href="#" class="color-2">
-								<div class="case-studies-summary">
-									<span>30 Photos</span>
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
-						</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas_beleza.png); "> 
+								<a href="beleza_pura.html">
+									<div class="case-studies-summary">
+										<h2>Dicas de Beleza</h2>
+									</div>
+								</a>
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde_ficar.jpg); ">
+								<a href="onde_ficar.html" class="color-2">
+									<div class="case-studies-summary">
+										<h2>Onde Ficar</h2>
+									</div>
+								</a>
+							</li>
 
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-							<a href="#" class="color-3">
-								<div class="case-studies-summary">
-									<span>90 Photos</span>
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
-						</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o_que_vestir.jpg); ">
+								<a href="o_que_vestir.html" class="color-3">
+									<div class="case-studies-summary">
+										<h2>O que Vestir</h2>
+									</div>
+								</a>
+							</li>
 						</ul>		
 					</div>
 				</div>
@@ -285,7 +289,9 @@
 					</div>
 				</div>
 				<div class="row animate-box">
-					<button class="btn btn-default btn-block">Contem comigo</button>
+					<div class="col-md-6 col-xs-12 col-md-offset-3">
+						<a href="rsvp.html" class="btn btn-default btn-block">Contem comigo</a>
+					</div>
 				</div>
 			</div>
 		</div>
