new images and updated css

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</div>
 		</nav>
 
-		<header id="tebw-header" class="tebw-cover" role="banner" style="background-image:url(images/first.jpg);" data-stellar-background-ratio="0.5">
+		<header id="tebw-header" class="tebw-cover" role="banner" style="background-image:url(images/bet1.jpeg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -120,7 +120,7 @@
 			</div>
 		</div>
 
-		<div id="tebw-event" class="tebw-bg" style="background-image:url(images/img_bg_1.png);">
+		<div id="tebw-event" class="tebw-bg" style="background-image:url(images/gruta.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -185,14 +185,14 @@
 					<div class="col-md-12">
 						<ul id="tebw-gallery-list">
 							
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas_beleza.png); "> 
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
 								<a href="beleza_pura.html">
 									<div class="case-studies-summary">
 										<h2>Dicas de Beleza</h2>
 									</div>
 								</a>
 							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde_ficar.jpg); ">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde-ficar2.jpg); ">
 								<a href="onde_ficar.html" class="color-2">
 									<div class="case-studies-summary">
 										<h2>Onde Ficar</h2>
@@ -201,7 +201,7 @@
 							</li>
 
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o_que_vestir.jpg); ">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o-que-vestir2.jpg); ">
 								<a href="o_que_vestir.html" class="color-3">
 									<div class="case-studies-summary">
 										<h2>O que Vestir</h2>
