--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 map-items">
 						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 							<span class="icon">
 								<i class="icon-briefcase"></i>
@@ -272,6 +272,8 @@
 
 					<div class="col-md-6 map-box">
 						<iframe src="https://www.google.com/maps/d/u/0/embed?key=AIzaSyDoudBKNG8oDqvsfGipDxFxcjwTtTe6qSE&mid=1_3LYDh-afGVb6SrviV-XkZlqpRqzdat4" width="100%" height="100%"></iframe>
+
+						<a class="map-link btn btn-default btn-block" href="https://www.google.com/maps/d/u/0/viewer?mid=1_3LYDh-afGVb6SrviV-XkZlqpRqzdat4&ll">Ver Mapa</a>
 					</div>
 				</div>
 
@@ -279,7 +281,7 @@
 		</div>
 
 
-		<div id="tebw-started" class="tebw-bg" style="background-image:url(images/img_bg_4.jpg);">
+		<div id="tebw-started" class="tebw-bg" style="background: #944f5b;">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row animate-box">
