--- a/gift_list.html
+++ b/gift_list.html
@@ -52,9 +52,9 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li class="has-dropdown">
-							<a>Utilidade</a>
+							<a>Utilidades</a>
 								<ul class="dropdown">
-									<li><a href="beleza_pura.html">Beleza Pura</a></li>
+									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
 									<li><a href="onde_ficar.html">Onde ficar</a></li>
 									<li><a href="o_que_vestir.html">O que vestir</a></li>
 								</ul>
@@ -69,29 +69,16 @@
 		</div>
 	</nav>
 
-	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
-		<div class="overlay"></div>
-		<div class="tebw-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Gallery</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/header.png);">
 	</header>
+
 
 	<div id="tebw-gallery">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-					<span>Our Memories</span>
-					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<h2>Presentes</h2>
+					<p>É isso aí</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -176,39 +163,6 @@
 							</a>
 						</li>
 					</ul>		
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="tebw-started" class="tebw-bg" style="background-image:url(images/img_bg_4.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center tebw-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-					<form class="form-inline">
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" class="form-control" id="name" placeholder="Name">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
-						</div>
-					</form>
 				</div>
 			</div>
 		</div>
