--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
-								<a>Utilidade</a>
+								<a>Utilidades</a>
 									<ul class="dropdown">
-										<li><a href="beleza_pura.html">Beleza Pura</a></li>
+										<li><a href="dica_beleza.html">Dicas de beleza</a></li>
 										<li><a href="onde_ficar.html">Onde ficar</a></li>
 										<li><a href="o_que_vestir.html">O que vestir</a></li>
 									</ul>
@@ -125,7 +125,6 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-						<span>nossos eventos especiais</span>
 						<h2>O casamento</h2>
 					</div>
 				</div>
@@ -177,7 +176,6 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-						<span>Dicas dos noivos</span>
 						<h2>Utilidades</h2>
 					</div>
 				</div>
@@ -281,7 +279,7 @@
 		</div>
 
 
-		<div id="tebw-started" class="tebw-bg" style="background: #944f5b;">
+		<div id="tebw-started" class="tebw-bg" style="background-image: url(images/footer.png); ">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row animate-box">
