--- a/onde_ficar.html
+++ b/onde_ficar.html
@@ -53,9 +53,9 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li class="has-dropdown">
-							<a>Utilidade</a>
+							<a>Utilidades</a>
 								<ul class="dropdown">
-									<li><a href="beleza_pura.html">Beleza Pura</a></li>
+									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
 									<li><a href="onde_ficar.html">Onde ficar</a></li>
 									<li><a href="o_que_vestir.html">O que vestir</a></li>
 								</ul>
@@ -70,9 +70,9 @@
 		</div>
 	</nav>
 
-	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
-		<div class="overlay"></div>
+	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/header.png);">
 	</header>
+
 
 	<div class="tebw-post">
 		<div class="container">
