--- a/rsvp.html
+++ b/rsvp.html
@@ -55,7 +55,7 @@
 						<li class="has-dropdown">
 							<a>Utilidades</a>
 								<ul class="dropdown">
-									<li><a href="beleza_pura.html">Beleza Pura</a></li>
+									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
 									<li><a href="onde_ficar.html">Onde ficar</a></li>
 									<li><a href="o_que_vestir.html">O que vestir</a></li>
 								</ul>
@@ -70,8 +70,7 @@
 		</div>
 	</nav>
 
-	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
-		<div class="overlay"></div>
+	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/header.png);">
 	</header>
 
 	<div class="tebw-rsvp">
