small text change

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										<div class="event-col">
 											<i class="icon-clock"></i>
 											<span>19:00</span>
-											<span>3:00</span>
+											<span>-</span>
 										</div>
 										<div class="event-col">
 											<i class="icon-calendar"></i>
