add link to quelegenda

--- a/rsvp.html
+++ b/rsvp.html
@@ -144,6 +144,7 @@
 						<p>
 							<small class="block">© 2018 Copiado e alterado por Bruno e Thaís</small>
 						</p>
+						<p><a href='https://quelegenda.com'>Legendas para Instagram</a></p>
 					</div>
 				</div>
 
